tests/programs/a1/local/invalid/interface_constants.java
public interface A {
  static final public int x = 42;
}